junk/vite-visual.err.log
[31mfailed to load config from C:\Users\user\My Drive\Documents\MSC\Development\donttouchpurple\deploy-ready\vite.config.ts[39m
[2m6:00:07 PM[22m [31m[1m[vite][22m[39m splitVendorChunkPlugin is not defined
[2m6:00:07 PM[22m [31m[1m[vite][22m[39m server restart failed
node:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: C:/Users/user/My Drive/Documents/MSC/Development/donttouchpurple/deploy-ready): [Error] Cannot find package 'autoprefixer' imported from C:\Users\user\My Drive\Documents\MSC\Development\donttouchpurple\deploy-ready\postcss.config.js
Error [ERR_MODULE_NOT_FOUND]: Cannot find package 'autoprefixer' imported from C:\Users\user\My Drive\Documents\MSC\Development\donttouchpurple\deploy-ready\postcss.config.js
    at Object.getPackageJSONURL (node:internal/modules/package_json_reader:301:9)
    at packageResolve (node:internal/modules/esm/resolve:768:81)
    at moduleResolve (node:internal/modules/esm/resolve:859:18)
    at defaultResolve (node:internal/modules/esm/resolve:991:11)
    at #cachedDefaultResolve (node:internal/modules/esm/loader:719:20)
    at #resolveAndMaybeBlockOnLoaderThread (node:internal/modules/esm/loader:736:38)
    at ModuleLoader.resolveSync (node:internal/modules/esm/loader:765:52)
    at #resolve (node:internal/modules/esm/loader:701:17)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:621:35)
    at ModuleJob.syncLink (node:internal/modules/esm/module_job:160:33)
    at ModuleJob.link (node:internal/modules/esm/module_job:245:17)
    at new ModuleJob (node:internal/modules/esm/module_job:224:26)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules/esm/loader:590:11)
    at afterResolve (node:internal/modules/esm/loader:625:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:631:12)
    at onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:650:32)
    at TracingChannel.tracePromise (node:diagnostics_channel:350:14)
    at ModuleLoader.import (node:internal/modules/esm/loader:646:21)
    at defaultImportModuleDynamicallyForModule (node:internal/modules/esm/utils:225:31)
    at importModuleDynamicallyCallback (node:internal/modules/esm/utils:267:12)
    at importDefault (file:///C:/Users/user/My%20Drive/Documents/MSC/Development/donttouchpurple/deploy-ready/node_modules/.pnpm/vite@5.4.21_@types+node@25.6.0_terser@5.47.1/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33759:60)
    at Object.search (file:///C:/Users/user/My%20Drive/Documents/MSC/Development/donttouchpurple/deploy-ready/node_modules/.pnpm/vite@5.4.21_@types+node@25.6.0_terser@5.47.1/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:25915:29)] {
  code: 'ERR_MODULE_NOT_FOUND'
}

Node.js v24.14.1
